--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load blog_extras %}
+{% load cache %}
 
 {% block content %}
     <h2>{{ post.title }}</h2>
@@ -15,7 +16,9 @@
     {% endrow %}
     {% row %}
         {% col %}
+	  {% cache 3600 recent_posts post %}
             {% recent_posts post %}
+	  {% endcache %}
         {% endcol %}
     {% endrow %}
 
